@@ -1,3 +1,8 @@
+2006-03-02  fabian
+
+    * Fixed VT100Screen::eraseInDisplay behavior.
+    * Fixed CPU usage issue.
+    
 2006-03-01  fabian
 
     * Fixed a memory leak in VT100Screen
